--- a/system_user_cms/user_project_detail_create_exsitdrawing.html
+++ b/system_user_cms/user_project_detail_create_exsitdrawing.html
@@ -108,11 +108,29 @@
       <div class="text-start">
         <h5 class="mb-0">会社名</h5>
         <!-- タイトルをクリックすると user_project_detail_design.html に戻る -->
-        <h4 class="mb-0 d-inline">
+        <h4 class="mb-0 d-inline me-3">
           <a href="user_project_detail_design.html" class="text-decoration-none text-dark">
             既存図作成 <i class="bi bi-pencil-square"></i>
           </a>
         </h4>
+        <!-- ステータス表示プルダウン -->
+        <div class="dropdown d-inline">
+          <button class="btn btn-outline-secondary btn-sm dropdown-toggle" type="button" id="statusDropdown" data-bs-toggle="dropdown" aria-expanded="false">
+            <i class="bi bi-gear-fill me-1"></i>既存図作成中
+          </button>
+          <ul class="dropdown-menu" aria-labelledby="statusDropdown">
+            <li>
+              <a class="dropdown-item" href="#" onclick="changeStatus('creating')">
+                <i class="bi bi-gear-fill me-2"></i>既存図作成中
+              </a>
+            </li>
+            <li>
+              <a class="dropdown-item" href="#" onclick="changeStatus('completed')">
+                <i class="bi bi-lock-fill me-2"></i>既存図完成
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
       <button class="btn btn-primary" type="button" onclick="location.href='user_project_detail_designlist.html'">
         <i class="bi bi-arrow-return-left"></i> プラン一覧に戻る
@@ -259,7 +277,7 @@
           <div class="d-grid gap-1">
               <!-- 1F -->
               <h6 class="mt-2 mb-2 small fw-bold">1F</h6>
-              <button class="btn btn-outline-primary btn-sm" data-bs-toggle="modal" data-bs-target="#roomModal1F1">1F：洋室1</button>
+              <button class="btn btn-outline-primary btn-sm" data-bs-toggle="modal" data-bs-target="#roomModal">1F：洋室1</button>
               <button class="btn btn-outline-secondary btn-sm">1F：洋室2</button>
               <button class="btn btn-outline-secondary btn-sm">1F：LDK</button>
               <button class="btn btn-outline-secondary btn-sm">1F：収納1</button>
@@ -1180,158 +1198,34 @@
     </div>
   </div>
 
-  <!-- 1F：洋室1詳細モーダル -->
-  <div class="modal fade" id="roomModal1F1" tabindex="-1" aria-labelledby="roomModal1F1Label" aria-hidden="true">
+  <!-- 下絵読み込みモーダル -->
+  <div class="modal fade" id="underlayModal" tabindex="-1" aria-labelledby="underlayModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-lg">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="roomModal1F1Label">1F：洋室1詳細</h5>
+          <h5 class="modal-title" id="underlayModalLabel">
+            <i class="bi bi-image me-2"></i>下絵読み込み
+          </h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
-          <!-- 基本情報 -->
-          <div class="mb-4">
-            <h6 class="fw-bold mb-3">基本情報　河本直己邸　部屋名：洋室１</h6>
-            <div class="table-responsive">
-              <table class="table table-bordered">
-                <tbody>
-                  <tr>
-                    <td class="fw-bold bg-light" style="width: 20%;">部屋タイプ</td>
-                    <td>
-                      <select class="form-select">
-                        <option value="洋室" selected>洋室</option>
-                        <option value="和室">和室</option>
-                        <option value="玄関">玄関</option>
-                        <option value="ポーチ">ポーチ</option>
-                        <option value="ガレージ">ガレージ</option>
-                        <option value="リビング">リビング</option>
-                        <option value="ダイニング">ダイニング</option>
-                        <option value="キッチン">キッチン</option>
-                        <option value="リビングダイニング">リビングダイニング</option>
-                        <option value="LDK">LDK</option>
-                        <option value="浴室">浴室</option>
-                        <option value="トイレ">トイレ</option>
-                        <option value="洗面所">洗面所</option>
-                        <option value="廊下">廊下</option>
-                        <option value="バルコニー">バルコニー</option>
-                        <option value="床の間">床の間</option>
-                        <option value="縁側">縁側</option>
-                        <option value="吹き抜け">吹き抜け</option>
-                        <option value="収納">収納</option>
-                        <option value="土間">土間</option>
-                      </select>
-                    </td>
-                  </tr>
-                  <tr>
-                    <td class="fw-bold bg-light">広さ（畳）</td>
-                    <td>
-                      <input type="number" class="form-control" value="6" min="0" step="0.5">
-                    </td>
-                  </tr>
-                  <tr>
-                    <td class="fw-bold bg-light">広さ（ｍ²）</td>
-                    <td>
-                      <input type="number" class="form-control" value="9.9" min="0" step="0.1">
-                    </td>
-                  </tr>
-                  <tr>
-                    <td class="fw-bold bg-light">X方向(mm)</td>
-                    <td>
-                      <input type="number" class="form-control" value="3300" min="0" step="10">
-                    </td>
-                  </tr>
-                  <tr>
-                    <td class="fw-bold bg-light">Y方向(mm)</td>
-                    <td>
-                      <input type="number" class="form-control" value="3000" min="0" step="10">
-                    </td>
-                  </tr>
-                  <tr>
-                    <td class="fw-bold bg-light">天井高(mm)</td>
-                    <td>
-                      <input type="number" class="form-control" value="2400" min="0" step="10">
-                    </td>
-                  </tr>
-                  <tr>
-                    <td class="fw-bold bg-light">床高(mm)</td>
-                    <td>
-                      <input type="number" class="form-control" value="0" min="0" step="10">
-                    </td>
-                  </tr>
-                </tbody>
-              </table>
-            </div>
+          <div class="text-center mb-4">
+            <i class="bi bi-cloud-upload fs-1 text-primary mb-3"></i>
+            <h5>プロジェクト名の調査結果図を取り込みますか？</h5>
+            <p class="text-muted">調査結果図を読み込むと、各図面に下絵として表示されます。</p>
           </div>
-
-          <!-- 仕上げ、下地 -->
-          <div class="mb-3">
-            <label class="form-label fw-bold">仕上げ、下地</label>
-            <textarea class="form-control" rows="3" readonly>壁：クロス仕上げ
-床：フローリング
-天井：クロス仕上げ</textarea>
-          </div>
-
-          <!-- 備考 -->
-          <div class="mb-3">
-            <label class="form-label fw-bold">備考</label>
-            <textarea class="form-control" rows="2" readonly>1階の南側にある洋室です。</textarea>
-          </div>
-
-          <!-- 木製建具 -->
-          <div class="mb-3">
-            <label class="form-label fw-bold">木製建具</label>
-            <table class="table table-bordered table-sm">
-              <thead class="table-light">
-                <tr>
-                  <th>種類</th>
-                  <th>メーカー名</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <td>片開きドア</td>
-                  <td>メーカーA</td>
-                </tr>
-                <tr>
-                  <td>引違い2枚</td>
-                  <td>メーカーB</td>
-                </tr>
-              </tbody>
-            </table>
-          </div>
-
-          <!-- 住設機器 -->
-          <div class="mb-3">
-            <label class="form-label fw-bold">住設機器</label>
-            <table class="table table-bordered table-sm">
-              <thead class="table-light">
-                <tr>
-                  <th>機器名</th>
-                  <th>メーカー名</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <td></td>
-                  <td></td>
-                </tr>
-                <tr>
-                  <td></td>
-                  <td></td>
-                </tr>
-              </tbody>
-            </table>
+          <div class="d-grid">
+            <button class="btn btn-primary btn-lg" onclick="loadUnderlay()">
+              <i class="bi bi-download me-2"></i>下絵読み込み
+            </button>
           </div>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">閉じる</button>
-          <button type="button" class="btn btn-primary">編集</button>
-          <button type="button" class="btn btn-success">更新</button>
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">キャンセル</button>
         </div>
       </div>
     </div>
   </div>
-
   <!-- ポーチ仕様モーダル -->
   <div class="modal fade" id="porchSpecModal" tabindex="-1" aria-labelledby="porchSpecModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-lg">
@@ -2696,6 +2590,27 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script src="../style.js"></script>
   <script>
+    // ステータス変更関数
+    function changeStatus(status) {
+      const dropdownButton = document.getElementById('statusDropdown');
+      const dropdownIcon = dropdownButton.querySelector('i');
+      const dropdownText = dropdownButton.querySelector('span') || dropdownButton.childNodes[2];
+      
+      if (status === 'creating') {
+        dropdownIcon.className = 'bi bi-gear-fill me-1';
+        dropdownButton.innerHTML = '<i class="bi bi-gear-fill me-1"></i>既存図作成中';
+      } else if (status === 'completed') {
+        dropdownIcon.className = 'bi bi-lock-fill me-1';
+        dropdownButton.innerHTML = '<i class="bi bi-lock-fill me-1"></i>既存図完成';
+      }
+      
+      // プルダウンを閉じる
+      const dropdown = bootstrap.Dropdown.getInstance(dropdownButton);
+      if (dropdown) {
+        dropdown.hide();
+      }
+    }
+
     fetch('user_header.html').then(r => r.text()).then(html => document.getElementById('header-container').innerHTML = html);
     fetch('user_footer.html').then(r => r.text()).then(html => document.getElementById('footer-container').innerHTML = html);
 
