--- a/system_user_cms/requirements_specification.html
+++ b/system_user_cms/requirements_specification.html
@@ -40,6 +40,12 @@
     <li><a href="#page10">user_project_detail_staff.html - 社内担当者</a></li>
     <li><a href="#page11">user_project_detail_partner.html - 外部協力会社</a></li>
     <li><a href="#page12">user_project_detail_other.html - 資料</a></li>
+    <li><a href="#page13">user_settings_work_type.html - 工事種類設定（システム管理者）</a></li>
+    <li><a href="#page14">user_settings_staff.html - 社内担当者設定（システム管理者）</a></li>
+    <li><a href="#page15">user_settings_partner.html - 協力業者登録（システム管理者）</a></li>
+    <li><a href="#page16">user_chat_all.html - チャット一覧</a></li>
+    <li><a href="#page17">user_nortification.html - お知らせ・通知</a></li>
+    <li><a href="#page18">user_user_detail.html - ユーザー詳細</a></li>
   </ol>
 
   <!-- ===== ページ1: 工事リスト ===== -->
@@ -717,6 +723,156 @@
     <tr>
       <td>アップロードモーダル</td>
       <td>資料名（入力）/ ファイル選択 / アップロードボタン</td>
+    </tr>
+  </table>
+
+  <!-- ===== ページ13: 工事種類設定（システム管理者） ===== -->
+  <h2 id="page13">13. user_settings_work_type.html - 工事種類設定（システム管理者）</h2>
+  <table>
+    <tr>
+      <th width="15%">項目</th>
+      <th width="85%">内容</th>
+    </tr>
+    <tr>
+      <td>ページタイトル</td>
+      <td>工事種類設定（システム管理者）</td>
+    </tr>
+    <tr>
+      <td>概要</td>
+      <td>工事種類マスタの一覧・追加・編集・削除。iPad Proサイズに最適化。</td>
+    </tr>
+    <tr>
+      <td>データ項目</td>
+      <td>番号 / 工事種類名 / 工種（セレクト）/ 表示のON/OFF</td>
+    </tr>
+    <tr>
+      <td>操作</td>
+      <td>追加ボタン / 編集アイコン / 削除アイコン</td>
+    </tr>
+  </table>
+
+  <!-- ===== ページ14: 社内担当者設定（システム管理者） ===== -->
+  <h2 id="page14">14. user_settings_staff.html - 社内担当者設定（システム管理者）</h2>
+  <table>
+    <tr>
+      <th width="15%">項目</th>
+      <th width="85%">内容</th>
+    </tr>
+    <tr>
+      <td>ページタイトル</td>
+      <td>社内担当者設定（システム管理者）</td>
+    </tr>
+    <tr>
+      <td>概要</td>
+      <td>社内担当者の一覧・追加・削除。iPad Proサイズに最適化。</td>
+    </tr>
+    <tr>
+      <td>データ項目</td>
+      <td>支店名 / 名前 / 職種 / 権限 / メール / 電話番号</td>
+    </tr>
+    <tr>
+      <td>操作</td>
+      <td>新規追加ボタン（モーダル表示）/ 削除ボタン</td>
+    </tr>
+  </table>
+
+  <!-- ===== ページ15: 協力業者登録（システム管理者） ===== -->
+  <h2 id="page15">15. user_settings_partner.html - 協力業者登録（システム管理者）</h2>
+  <table>
+    <tr>
+      <th width="15%">項目</th>
+      <th width="85%">内容</th>
+    </tr>
+    <tr>
+      <td>ページタイトル</td>
+      <td>協力業者登録（システム管理者）</td>
+    </tr>
+    <tr>
+      <td>概要</td>
+      <td>協力業者の一覧・登録・編集・削除。iPad Proサイズに最適化。</td>
+    </tr>
+    <tr>
+      <td>データ項目</td>
+      <td>会社名 / 代表者 / 所在地 / 電話番号 / FAX / 担当工種</td>
+    </tr>
+    <tr>
+      <td>操作</td>
+      <td>新規登録ボタン（モーダル表示）/ 編集ボタン / 削除ボタン</td>
+    </tr>
+  </table>
+
+  <!-- ===== ページ16: チャット一覧 ===== -->
+  <h2 id="page16">16. user_chat_all.html - チャット一覧</h2>
+  <table>
+    <tr>
+      <th width="15%">項目</th>
+      <th width="85%">内容</th>
+    </tr>
+    <tr>
+      <td>ページタイトル</td>
+      <td>案件管理（チャット）</td>
+    </tr>
+    <tr>
+      <td>概要</td>
+      <td>全チャットの一覧表示。iPad Proサイズに最適化。</td>
+    </tr>
+    <tr>
+      <td>データ項目</td>
+      <td>チャットタイトル / 案件名 / 最終メッセージプレビュー / 時刻</td>
+    </tr>
+    <tr>
+      <td>操作</td>
+      <td>項目クリックでチャット詳細遷移</td>
+    </tr>
+  </table>
+
+  <!-- ===== ページ17: お知らせ・通知 ===== -->
+  <h2 id="page17">17. user_nortification.html - お知らせ・通知</h2>
+  <table>
+    <tr>
+      <th width="15%">項目</th>
+      <th width="85%">内容</th>
+    </tr>
+    <tr>
+      <td>ページタイトル</td>
+      <td>お知らせと通知</td>
+    </tr>
+    <tr>
+      <td>概要</td>
+      <td>お知らせ・通知をタブで切り替え表示。iPad Proサイズに最適化。</td>
+    </tr>
+    <tr>
+      <td>データ項目</td>
+      <td>お知らせ：タイトル / 日付 / 内容 / 未読・既読バッジ<br>通知：通知内容 / 日付 / 未読・既読バッジ</td>
+    </tr>
+    <tr>
+      <td>操作</td>
+      <td>タブ切り替え / 項目クリック</td>
+    </tr>
+  </table>
+
+  <!-- ===== ページ18: ユーザー詳細 ===== -->
+  <h2 id="page18">18. user_user_detail.html - ユーザー詳細</h2>
+  <table>
+    <tr>
+      <th width="15%">項目</th>
+      <th width="85%">内容</th>
+    </tr>
+    <tr>
+      <td>ページタイトル</td>
+      <td>ユーザー詳細</td>
+    </tr>
+    <tr>
+      <td>概要</td>
+      <td>ユーザー情報の表示・編集。iPad Proサイズに最適化。</td>
+    </tr>
+    <tr>
+      <td>データ項目</td>
+      <td>メール / パスワード / 支店名 / 名前 / カナ / 職種 / 資格 / 担当工事種別 / 所属部署 / 電話番号</td>
+    </tr>
+    <tr>
+      <td>操作</td>
+      <td>変更ボタンクリック</td>
     </tr>
   </table>
 
