--- a/user_site/requirements_specification.html
+++ b/user_site/requirements_specification.html
@@ -41,13 +41,15 @@
     <li><a href="#page12">site_project_detail_report_create_step8.html - 工事日誌作成（ステップ8）</a></li>
     <li><a href="#page13">site_project_detail_report_create_preview.html - 工事日誌プレビュー</a></li>
     <li><a href="#page14">site_project_detail_schedule.html - スケジュール</a></li>
-    <li><a href="#page15">site_project_detail_overview.html - 工事概要</a></li>
-    <li><a href="#page16">site_project_detail_drawing.html - 図面</a></li>
-    <li><a href="#page17">site_project_detail_budget.html - 予算</a></li>
-    <li><a href="#page18">site_chat_list.html - チャット一覧</a></li>
-    <li><a href="#page19">site_notifications.html - お知らせ</a></li>
-    <li><a href="#page20">site_myprof.html - マイページ</a></li>
-    <li><a href="#page21">site_footer.html - フッターメニュー</a></li>
+    <li><a href="#page15">site_project_detail_drawing.html - 図面</a></li>
+    <li><a href="#page16">site_project_detail_budget.html - 予算</a></li>
+    <li><a href="#page17">site_chat_list.html - チャット一覧</a></li>
+    <li><a href="#page18">site_notifications.html - お知らせ</a></li>
+    <li><a href="#page19">site_myprof.html - マイページ</a></li>
+    <li><a href="#page20">site_footer.html - フッターメニュー</a></li>
+    <li><a href="#page21">site_login.html - ログイン</a></li>
+    <li><a href="#page22">site_signup.html - サインアップ</a></li>
+    <li><a href="#page23">site_settings.html - システム設定</a></li>
   </ol>
 
   <!-- ===== ページ1: 工事管理 ===== -->
@@ -528,23 +530,7 @@
     </tr>
   </table>
 
-  <h2 id="page15">15. site_project_detail_overview.html - 工事概要</h2>
-  <table>
-    <tr>
-      <th width="15%">項目</th>
-      <th width="85%">内容</th>
-    </tr>
-    <tr>
-      <td>概要</td>
-      <td>工事概要・契約情報表示。iPhone 17 Proサイズに最適化。1カラム縦並び。</td>
-    </tr>
-    <tr>
-      <td>データ項目</td>
-      <td>工事名 / 工事種類 / 工事場所 / 発注者 / 契約金額 / 工期 / 責任者（社内） / 現場代理人 / 主任技術者 / 状況 / 進捗率 / 備考 / 契約詳細情報</td>
-    </tr>
-  </table>
-
-  <h2 id="page16">16. site_project_detail_drawing.html - 図面</h2>
+  <h2 id="page15">15. site_project_detail_drawing.html - 図面</h2>
   <table>
     <tr>
       <th width="15%">項目</th>
@@ -560,7 +546,7 @@
     </tr>
   </table>
 
-  <h2 id="page17">17. site_project_detail_budget.html - 予算</h2>
+  <h2 id="page16">16. site_project_detail_budget.html - 予算</h2>
   <table>
     <tr>
       <th width="15%">項目</th>
@@ -576,8 +562,8 @@
     </tr>
   </table>
 
-  <!-- ===== ページ18: チャット一覧 ===== -->
-  <h2 id="page18">18. site_chat_list.html - チャット一覧</h2>
+  <!-- ===== ページ17: チャット一覧 ===== -->
+  <h2 id="page17">17. site_chat_list.html - チャット一覧</h2>
   <table>
     <tr>
       <th width="15%">項目</th>
@@ -597,8 +583,8 @@
     </tr>
   </table>
 
-  <!-- ===== ページ19: お知らせ ===== -->
-  <h2 id="page19">19. site_notifications.html - お知らせ</h2>
+  <!-- ===== ページ18: お知らせ ===== -->
+  <h2 id="page18">18. site_notifications.html - お知らせ</h2>
   <table>
     <tr>
       <th width="15%">項目</th>
@@ -618,8 +604,8 @@
     </tr>
   </table>
 
-  <!-- ===== ページ20: マイページ ===== -->
-  <h2 id="page20">20. site_myprof.html - マイページ</h2>
+  <!-- ===== ページ19: マイページ ===== -->
+  <h2 id="page19">19. site_myprof.html - マイページ</h2>
   <table>
     <tr>
       <th width="15%">項目</th>
@@ -639,8 +625,8 @@
     </tr>
   </table>
 
-  <!-- ===== ページ21: フッターメニュー ===== -->
-  <h2 id="page21">21. site_footer.html - フッターメニュー</h2>
+  <!-- ===== ページ20: フッターメニュー ===== -->
+  <h2 id="page20">20. site_footer.html - フッターメニュー</h2>
   <table>
     <tr>
       <th width="15%">項目</th>
@@ -661,6 +647,81 @@
     <tr>
       <td>ページ別調整</td>
       <td>各ページで特定のフッター項目を削除可能（JavaScriptで動的削除）</td>
+    </tr>
+  </table>
+
+  <!-- ===== ページ21: ログイン ===== -->
+  <h2 id="page21">21. site_login.html - ログイン</h2>
+  <table>
+    <tr>
+      <th width="15%">項目</th>
+      <th width="85%">内容</th>
+    </tr>
+    <tr>
+      <td>ページタイトル</td>
+      <td>ログイン</td>
+    </tr>
+    <tr>
+      <td>概要</td>
+      <td>メールアドレスとパスワードでログイン。iPhone 17 Proサイズに最適化。</td>
+    </tr>
+    <tr>
+      <td>データ項目</td>
+      <td>メールアドレス（ID） / パスワード</td>
+    </tr>
+    <tr>
+      <td>操作</td>
+      <td>ログインボタンクリック / パスワード忘れリンク</td>
+    </tr>
+  </table>
+
+  <!-- ===== ページ22: サインアップ ===== -->
+  <h2 id="page22">22. site_signup.html - サインアップ</h2>
+  <table>
+    <tr>
+      <th width="15%">項目</th>
+      <th width="85%">内容</th>
+    </tr>
+    <tr>
+      <td>ページタイトル</td>
+      <td>サインアップ</td>
+    </tr>
+    <tr>
+      <td>概要</td>
+      <td>新規ユーザー登録フォーム。iPhone 17 Proサイズに最適化。</td>
+    </tr>
+    <tr>
+      <td>データ項目</td>
+      <td>名前 / 住所 / メールアドレス / パスワード</td>
+    </tr>
+    <tr>
+      <td>操作</td>
+      <td>サインアップボタンクリック</td>
+    </tr>
+  </table>
+
+  <!-- ===== ページ23: システム設定 ===== -->
+  <h2 id="page23">23. site_settings.html - システム設定</h2>
+  <table>
+    <tr>
+      <th width="15%">項目</th>
+      <th width="85%">内容</th>
+    </tr>
+    <tr>
+      <td>ページタイトル</td>
+      <td>システム設定（サイト用）</td>
+    </tr>
+    <tr>
+      <td>概要</td>
+      <td>通知設定のON/OFF切り替え。iPhone 17 Proサイズに最適化。</td>
+    </tr>
+    <tr>
+      <td>データ項目</td>
+      <td>通知項目（案件新規作成/案件ステータス変更/プラン新規作成/プランステータス変更/業者見積もり依頼/業者見積もり提出/見積もりステータス変更/資金計画ステータス変更/チャット受信/お知らせ/見積もり上長承認または却下/資金計画上長承認または却下）</td>
+    </tr>
+    <tr>
+      <td>操作</td>
+      <td>チェックボックス切り替え / 設定保存ボタン</td>
     </tr>
   </table>
 
